# kids_of_gpt

./: .dockerignore  BOT_CONTRACT_GO.md  CODEGEN_MASTER_PLAN.md  GO_CORE_EXECUTION_PLAN.md  README.md  READMEPromts.md  STAGE1_SCAFFOLD.md  TEAM_AGENT_WORKFLOW.md  docker-compose.yml  go.mod
api/: README.md
api/openapi/: admin.yaml  gateway.yaml
contracts/: README.md
contracts/events/: burmalda.spin_completed.json  order.created.json  user.registered.json  wallet.credited.json  xp.granted.json
docs/: architecture.md  domain-model.md  go-wave-a-runbook.md  hackathon-fit-check.md  prompt-rules.md  service-map.md  wave-a-go-test-strategy.md
frontend/: .gitignore  README.md  index.html  initialPrompt.md  package-lock.json  package.json
frontend/admin/: README.md
frontend/app/: README.md
frontend/src/: App.jsx
frontend/src/api/: games.js  loan.js  market.js  moshennik.js  quiz.js  user.js
frontend/src/config/: access.js  ranks.js
frontend/src/ds/: index.js
frontend/src/router/: index.jsx
frontend/src/store/: UserContext.jsx  useGamesStore.js  useLoanStore.js  useMarketStore.js  useMoshennikStore.js  useShmonStore.js  useUserStore.js
frontend/src/styles/: globals.css
gateway/: README.md
gateway/bff-go/: main.go
proto/: README.md
proto/balanda/: balanda.proto
proto/barygi/: barygi.proto
proto/burmalda/: burmalda.proto
proto/catalog/: catalog.proto
proto/entitlements/: progression.proto
proto/eta_engine/: eta_engine.proto
proto/kinoshka/: kinoshka.proto
proto/leaderboard/: leaderboard.proto
proto/notification/: notification.proto
proto/profile/: profile.proto
proto/registry/: auth.proto
proto/sharaga/: sharaga.proto
proto/slot_engine/: slot_engine.proto
proto/wallet/: ledger.proto
services/: README.md
services/.claude/skills/: architect.md  code-reviewer.md  hard-critic.md  test-writer.md
services/cpp/: .gitignore  README.md  docker-compose.yml
services/cpp/eta-engine/: CMakeLists.txt  Dockerfile  README.md  vcpkg.json
services/cpp/scripts/: build-local.sh  (+1 more)
services/cpp/slot-engine/: CMakeLists.txt  Dockerfile  README.md  vcpkg.json
services/cpp/slot-engine/config/: payout_table.json
services/cpp/slot-engine/src/: config.cpp  config.h  engine.cpp  engine.h  health.cpp  health.h  main.cpp  payout_table.cpp  payout_table.h  server.cpp  server.h
services/cpp/slot-engine/tests/: engine_test.cpp  payout_table_test.cpp  server_test.cpp
services/go/: Dockerfile  README.md
services/python/: README.md
(+116 files in other folders)
